2013-12-08  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* binload.c: When no OS patches were enabled, Running of BASIC files would
  cause the emulated system to go sraight to Self Test: the calls to
  Device_PatchOS() would enable E: patches, but wouldn't disable the OS memory
  checks. Calling ESC_UpdatePatches() instead solves the issue.


2013-12-07  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cartridge.[ch], atari800.man, DOC/cart.txt: Added support for a small subset
  of The!Cart mapping.
* cartridge.[ch]: CARTRIDGE_kb is not modified anywhere, made it const.


2013-12-04  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cartridge.[ch], ui.c, android/jni/jni.c, atari800.man, DOC/cart.txt,
  DOC/USAGE: Added read-only support for the 4 MB Flash MegaCart mapping.


2013-12-02  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cartridge.[ch], ui.c, android/jni/jni.c, atari800.man, DOC/cart.txt,
  DOC/USAGE: Added support for the MegaMax 2 MB cartridge mapping. Developers
  of The!Cart confirmed that the CART ID for the 64MB variant is not needed, so
  I've reused it.


2013-11-23  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* configure.ac, atari.c, platform.h, atari_ps2.c, sdl/main.c : Minimal cleanup
  of platform-specific Sleep/Time routines.


2013-11-11  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* monitor.c: Fixed & updated symbols based on OS & BASIC source listings.


2013-11-09  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* DOC/cart.txt: By request of the developers of The!Cart, reserved two IDs
  for this new cartridge type.


2013-05-02  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* DOC/INSTALL: Update NestedVM build manual - it doesn't build with
  --enable-ide.
* javanvm/atari_javanvm.c: Fix overflow of dsp_buffer - could happen on some
  systems where JAVANVM_SoundAvailable sometimes returns value larger than
  2*line_buffer_size.
* DOC/INSTALL, configure.ac, Makefile.in, javanvm/atari_javanvm.[ch],
  javanvm/input.[ch], javanvm/javanvm.h, javanvm/main.c, javanvm/sound.c,